# wswebcam

./: .dockerignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/wswebcam/: __main__.py  client.py  device.py  protocol.py  server.py
